added first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>second booo yeah</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <div>
+        <h3> My first website !!!!!</h3>
+        <p>
+            Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation
+        </p>
+    </div>
     
 </body>
 </html>
