--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation
         </p>
     </div>
+    <div>
+        <h3>pagla </h3>
+        <img src="image/faf35bb6-1872-4955-b29c-50ea0c7061ea.png" width="700" height="600" alt="">
+    </div>
     
 </body>
 </html>
